--- a/styles.css
+++ b/styles.css
@@ -83,3 +83,8 @@ p {
 .tile-back {
     background-color: rgba(54, 54, 255, 0.79);
 }
+
+.card{
+    border: solid 2px black;
+    box-shadow: 2px 2px 3px black;
+}
